#add_library(application LinearRegression.cpp RegressionTree.cpp CovarianceMatrix.cpp Percentile.cpp DataCube.cpp MutualInformation.cpp KMeans.cpp Count.cpp)
add_library(application LinearRegression.cpp RegressionTree.cpp CovarianceMatrix.cpp Percentile.cpp DataCube.cpp MutualInformation.cpp Count.cpp)
